--- a/Style/stylesheet.css
+++ b/Style/stylesheet.css
@@ -1,4 +1,28 @@
 @import url("https://fonts.googleapis.com/css2?family=Kanit:wght@100;200;300;400;500;600&display=swap");
+:root {
+  --primary-color: #4c136b;
+  --secondary-color: #220e2d;
+  --light: #fff;
+}
+
+@font-face {
+  font-family: "copperplate_gothic_boldRg";
+  src: url("copperplate_gothic_bold_regular-webfont.woff2") format("woff2"), url("copperplate_gothic_bold_regular-webfont.woff") format("woff");
+  font-weight: normal;
+  font-style: normal;
+}
+@font-face {
+  font-family: "copperplate_gothic_boldRg";
+  src: url("copperplategothicbold-webfont.woff2") format("woff2"), url("copperplategothicbold-webfont.woff") format("woff");
+  font-weight: normal;
+  font-style: normal;
+}
+@font-face {
+  font-family: "copperplate_gothic_boldRg";
+  src: url("coprgtb-webfont.woff2") format("woff2"), url("coprgtb-webfont.woff") format("woff");
+  font-weight: normal;
+  font-style: normal;
+}
 * {
   padding: 0;
   margin: 0;
@@ -6,7 +30,7 @@
 
 body {
   font-size: 16px;
-  font-family: "Kanit", sans-serif;
+  font-family: "copperplate_gothic_boldRg";
   line-height: 1;
 }
 
@@ -17,15 +41,16 @@ body {
 
 .comapny-name {
   font-size: 60px;
-  color: #4353a4;
+  color: var(--primary-color);
   transition: 0.3s ease-in-out;
+  padding: 15px 0 0;
 }
 .comapny-name:hover {
-  color: #0f1222;
+  color: var(--secondary-color);
 }
 
 .banner {
-  background: url("../images/paint.jpeg") no-repeat 100%/cover #fff;
+  background: url("../images/paint-borderless.png") no-repeat 100%/cover var(--light);
   height: 100vh;
   width: 100vw;
 }
@@ -40,7 +65,7 @@ body {
 .banner .banner-content h1 {
   font-size: 50px;
   padding: 40px;
-  color: #fff;
+  color: var(--light);
   border-radius: 15px;
   max-width: 68%;
   text-shadow: -1px 0px 4px rgba(0, 0, 0, 0.7);
@@ -56,7 +81,7 @@ body {
   padding-top: 32%;
   width: 96%;
   margin-inline: auto;
-  background: #fff;
+  background: var(--light);
   text-align: end;
   margin-right: -20%;
   position: relative;
@@ -64,7 +89,7 @@ body {
 }
 .our-understanding .understanding-wrapper .content .block {
   position: absolute;
-  background: #4353a4;
+  background: var(--primary-color);
   padding: 1em 2em;
   top: 0;
   right: 0;
@@ -78,7 +103,7 @@ body {
   line-height: 1;
 }
 .our-understanding .understanding-wrapper .image-section {
-  background: url("../images/street.jpg") no-repeat 0 75%/100% #fff;
+  background: url("../images/tower.png") no-repeat 0 75%/100% var(--light);
   width: 100%;
   height: 55em;
 }
@@ -100,14 +125,14 @@ body {
   display: flex;
 }
 .crb-discussion .discussion-img {
-  background: url("../images/night.jpg") 0 75%/cover no-repeat, #fff;
+  background: url("../images/buildings.png") 0 75%/cover no-repeat, var(--light);
   width: 60%;
   height: 55em;
 }
 .crb-discussion .content-discussion {
   width: 40%;
   margin: 6% 0 0 -8%;
-  background: #fff;
+  background: var(--light);
   padding: 10% 0 0 5%;
   position: relative;
 }
@@ -117,7 +142,7 @@ body {
 }
 .crb-discussion .content-discussion .block {
   position: absolute;
-  background: #4353a4;
+  background: var(--primary-color);
   padding: 1.5em 2.7em;
   top: 0;
   left: 0;
@@ -129,43 +154,93 @@ body {
   font-size: 30px;
 }
 
-footer {
-  background: #4353a4;
-  padding: 8em 0 4em;
-  color: #fff;
+.clocks-wrapper {
+  min-height: auto;
+  background: url("../images/paint-borderless.png") no-repeat 100%/cover var(--light);
+  background-attachment: fixed;
 }
-footer .footer-content {
+.clocks-wrapper .crb-wrapper {
+  max-width: 1450px;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(18%, 1fr));
+  gap: 15px;
+}
+.clocks-wrapper .crb-wrapper h6 {
+  font-size: 20px;
+  text-transform: capitalize;
+  text-align: center;
+  color: var(--light);
+}
+.clocks-wrapper .crb-wrapper .single-clock {
+  padding: 3em 0 2em;
+  margin: 8em 0;
+  background: var(--primary-color);
+  border-radius: 10px;
+  box-shadow: 0px 0px 11px 0px rgba(0, 0, 0, 0.75);
+}
+.clocks-wrapper .clock {
+  color: #000;
+  background: var(--light);
+  min-height: 10px;
+  font-size: 30px;
+  letter-spacing: 7px;
+  padding: 0.7em 0;
+  border-radius: 10px;
+  margin-top: 10px;
+  margin-inline: 10px;
+  text-align: center;
+}
+
+footer {
+  background: var(--primary-color);
+  padding: 8em 0 4em;
+  color: var(--light);
+}
+footer .footer-content .crb-footr-container {
   max-width: 800px;
+  margin-inline: auto;
   display: flex;
   justify-content: center;
   align-items: center;
 }
-footer .footer-content .cmpany-name {
+footer .footer-content .crb-footr-container .cmpany-name {
   font-size: 45px;
   transition: 0.3s ease-in-out;
   height: 3em;
   padding-right: 50px;
-  border-right: 2px solid #fff;
+  border-right: 2px solid var(--light);
 }
-footer .footer-content .cmpany-name:hover {
-  color: #0f1222;
+footer .footer-content .crb-footr-container .cmpany-name:hover {
+  color: var(--secondary-color);
 }
-footer .footer-content .right-sec {
+footer .footer-content .crb-footr-container .cmpany-name img {
+  width: 150px;
+}
+footer .footer-content .crb-footr-container .right-sec {
   padding-left: 50px;
   padding-top: 2em;
 }
-footer .footer-content .right-sec h5 {
+footer .footer-content .crb-footr-container .right-sec h5 {
   font-size: 30px;
 }
-footer .footer-content .right-sec ul {
+footer .footer-content .crb-footr-container .right-sec ul {
   font-size: 16px;
   margin: 15px 0 0;
 }
-footer .footer-content .right-sec ul li {
+footer .footer-content .crb-footr-container .right-sec ul li, footer .footer-content .crb-footr-container .right-sec ul a {
   margin: 5px 0 0;
   list-style: none;
   transition: 0.3s ease-in-out;
+  color: var(--light);
+  text-decoration: none;
 }
-footer .footer-content .right-sec ul li:hover {
-  color: #0f1222;
+footer .footer-content .crb-footr-container .right-sec ul li:hover, footer .footer-content .crb-footr-container .right-sec ul a:hover {
+  color: var(--secondary-color);
+}
+footer .footer-content .copyright {
+  display: flex;
+  justify-content: center;
+  padding: 20px 0 0;
+  text-transform: capitalize;
+  font-size: 13px;
 }/*# sourceMappingURL=stylesheet.css.map */
