--- a/Style/stylesheet.scss
+++ b/Style/stylesheet.scss
@@ -55,22 +55,17 @@ body {
   height: 100vh;
   width: 100vw;
   .banner-shadow {
-    background: #00000010;
+    background: #0000004a;
     width: 100vw;
     height: 100vh;
   }
   .banner-content {
     padding: 30vh 0 0;
-    span {
-      display: block;
-      // background: #ffffffad;
-      background: #4c136b61;
-      border-radius: 10px;
-      max-width: 75%;
-    }
+
     h1 {
+      max-width: 68%;
       font-size: 50px;
-      padding: 40px;
+      padding: 40px 0;
       color: #fff;
       border-radius: 15px;
       text-shadow: -1px 0px 4px rgba(0,0,0,0.7);
